gaudio-sdk/example/c/gaudio.h

#define AUDIO_ENUM_POSITION      1
#define AUDIO_ENUM_VELOCITY      2
#define AUDIO_ENUM_FORWARD       3
#define AUDIO_ENUM_UP            4
#define AUDIO_ENUM_SAMPLERATE    5
#define AUDIO_ENUM_CHANNEL       6
#define AUDIO_ENUM_FORMAT        7
#define AUDIO_ENUM_DURATION      8
#define AUDIO_ENUM_LOOP          9
#define AUDIO_ENUM_GAIN          10
#define AUDIO_ENUM_PAN           11
#define AUDIO_ENUM_SPEED_OF_PLAY 12
#define AUDIO_ENUM_SOUND_SPEED   13
#define AUDIO_ENUM_MUTE          14
#define AUDIO_ENUM_TITLE         15
#define AUDIO_ENUM_TRACK         16
#define AUDIO_ENUM_ALBUM         17
#define AUDIO_ENUM_ARTIST        18
#define AUDIO_ENUM_PUBLISHDATE   19
#define AUDIO_ENUM_GENRE         20
#define AUDIO_ENUM_COMMENT       21
#define AUDIO_ENUM_AUDIO         22
#define AUDIO_ENUM_BITERATE      23
#define AUDIO_ENUM_VERSION       24
#define AUDIO_ENUM_DRIVER        25
#define AUDIO_ENUM_SOUNDFONT     26
#define AUDIO_ENUM_PLAYING       27
#define AUDIO_ENUM_ROLLOFF       28
#define AUDIO_ENUM_ATTENUATION   29
#define AUDIO_ENUM_INNER_ANGLE   30
#define AUDIO_ENUM_OUTER_GAIN    31
typedef struct gsource_  gsource;
typedef struct geffect_  geffect;
extern GAPI void GAPIENTRY gaudio_init(const char* addons);
extern GAPI void GAPIENTRY gaudio_deinit();
#define AUDIO_EFFECT_NONE                  -1
#define AUDIO_EFFECT_PHASER                 3
#define AUDIO_EFFECT_INVERT                 4
#define AUDIO_EFFECT_SWAP_CHANNEL           5
#define AUDIO_EFFECT_MERGE_CHANNEL          6
#define AUDIO_EFFECT_SPEED_CHANGER          7
#define AUDIO_EFFECT_ECHO                   8
#define AUDIO_EFFECT_REVERB                 9
#define AUDIO_EFFECT_FFT                    10
#define AUDIO_EFFECT_EQUALIZER              11
#define AUDIO_EFFECT_BASSBOOST              12
#define AUDIO_EFFECT_CHORUS                 13
#define AUDIO_EFFECT_STEREO_ENHANCE         14
#define AUDIO_EFFECT_DISTORTION             15
#define AUDIO_EFFECT_FOLDBACK_DISTORTION    16
#define AUDIO_EFFECT_FLANGER                17
#define AUDIO_EFFECT_AUTOWAH                18
#define AUDIO_EFFECT_COMPRESSER             19
#define AUDIO_EFFECT_MODULATOR              20
#define AUDIO_EFFECT_FADE_IN                21
#define AUDIO_EFFECT_FADE_OUT               22
extern GAPI int32_t GAPIENTRY gaudio_is_support(int32_t param,int32_t value);
extern GAPI void GAPIENTRY gaudio_set_float(int32_t param,float value);
extern GAPI void GAPIENTRY gaudio_get_float(int32_t param,float* value);
extern GAPI void GAPIENTRY gaudio_set_int32(int32_t param,int32_t value);
extern GAPI void GAPIENTRY gaudio_get_int32(int32_t param,int32_t* value);
extern GAPI void GAPIENTRY gaudio_set_string(int32_t param,const char* value);
extern GAPI int32_t GAPIENTRY gaudio_get_string(int32_t param,char* value);
extern GAPI int32_t GAPIENTRY gaudio_error_get();
extern GAPI void GAPIENTRY gaudio_listener_set_float3(int32_t param,float x,float y,float z);
extern GAPI void GAPIENTRY gaudio_listener_get_float3(int32_t param,float* x,float* y,float* z);
extern GAPI gsource* GAPIENTRY gaudio_source_create_from_file(const char* file,int32_t flag);
extern GAPI gsource* GAPIENTRY gaudio_source_create_from_buffer(int8_t* buffer,uint32_t length);
extern GAPI gsource* GAPIENTRY gaudio_source_create_from_buffer2(int32_t samplerate,int32_t channels,int32_t format,int8_t* pcm,int32_t length);
extern GAPI void  GAPIENTRY gaudio_source_destroy(gsource* source);
extern GAPI void  GAPIENTRY gaudio_source_set_user(gsource* source,void* user);
extern GAPI void* GAPIENTRY gaudio_source_get_user(gsource* source);
typedef void(GAPICONV* gfinish)(gsource* source);
extern GAPI void GAPIENTRY gaudio_source_set_finish_callback(gsource* source,gfinish finish);
typedef void(GAPICONV* gerror)(gsource* source,int32_t param,int32_t value);
extern GAPI void GAPIENTRY gaudio_source_set_error_callback(gsource* source,gerror error);
extern GAPI void GAPIENTRY gaudio_source_play(gsource* source,int32_t flag);
extern GAPI void GAPIENTRY gaudio_source_play3(gsource* source,int32_t flag);
extern GAPI void GAPIENTRY gaudio_source_pause(gsource* source);
extern GAPI void GAPIENTRY gaudio_source_stop(gsource* source);
extern GAPI void GAPIENTRY gaudio_source_seek(gsource* source,int32_t missecond);
typedef void(GAPICONV* gposition)(gsource* source,int32_t position);
extern GAPI void GAPIENTRY gaudio_source_set_position_callback(gsource* source,gposition position);
extern GAPI void GAPIENTRY gaudio_source_set_float(gsource* source,int32_t param,float value);
extern GAPI void GAPIENTRY gaudio_source_get_float(gsource* source,int32_t param,float* value);
extern GAPI void GAPIENTRY gaudio_source_set_int32(gsource* source,int32_t param,int32_t value);
extern GAPI void GAPIENTRY gaudio_source_get_int32(gsource* source,int32_t param,int32_t* value);
extern GAPI geffect* GAPIENTRY gaudio_effect_create(int32_t effect,int32_t flag);
extern GAPI void GAPIENTRY gaudio_effect_destroy(geffect* effect);
typedef void(GAPICONV* gefxcb)(geffect*,float*,int32_t,int32_t,int32_t);
extern GAPI void GAPIENTRY gaudio_effect_set_fft_callback(geffect*,gefxcb);
typedef void(GAPICONV* gefxpcmcb)(geffect* efx,float** pcm,int32_t channel,int32_t samplerate,int32_t length);
extern GAPI void GAPIENTRY gaudio_effect_bind(geffect* effect,int32_t flag);
extern GAPI void GAPIENTRY gaudio_effect_bind_to_source(geffect* effect,gsource* source);
extern GAPI void GAPIENTRY gaudio_effect_unbind(geffect* effect);
extern GAPI void GAPIENTRY gaudio_effect_unbind_from_source(geffect* effect,gsource* source);
extern GAPI void GAPIENTRY gaudio_effect_set_float(geffect* effect,int32_t param,float value);
extern GAPI void GAPIENTRY gaudio_effect_get_float(geffect* effect,int32_t param,float* value);
extern GAPI void GAPIENTRY gaudio_effect_set_int32(geffect* effect,int32_t param,int32_t value);
extern GAPI void GAPIENTRY gaudio_effect_get_int32(geffect* effect,int32_t param,int32_t* value);